[gd_scene load_steps=3 format=3 uid="uid://vgj24tomw87i"]

[ext_resource type="Script" path="res://Scenes/UI/PauseMenu/pause_overlay.gd" id="1_s87xj"]
[ext_resource type="AudioStream" uid="uid://dapacmyc57jh7" path="res://Assets/Sounds/buttonClickMenu.mp3" id="2_mlejh"]

[node name="PauseOverlay" type="CanvasLayer"]
script = ExtResource("1_s87xj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.54902)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mlejh")
volume_db = -12.0
bus = &"VFX"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
